# research2

./: .gitattributes  .gitignore
ada_lora_drs_cifar100/: README.md  pyproject.toml  requirements.txt
ada_lora_drs_cifar100/configs/: cifar100_10x10_vitb16_in21k.yaml  cifar100_50x2_vitb16_in21k.yaml  cifar100_quick.yaml
ada_lora_drs_cifar100/scripts/: check_timm_models.py  run_cifar100_10x10.sh  run_cifar100_50x2.sh  run_quick.sh  summarize_results.py
ada_lora_drs_cifar100/src/adadrs/: config.py  data.py  drs.py  lora_kv.py  losses.py  metrics.py  models.py  train_cil.py  utils.py
ada_lora_drs_cifar100/tests/: conftest.py  test_lora_kv.py
