[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adalora-drs-cifar100"
version = "0.1.0"
description = "Ada-LoRA-DRS experiments for CIFAR-100 class-incremental learning"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
